--- a/index.html
+++ b/index.html
@@ -1,166 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Personal Portfolio Website </title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-</head>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Spotify - Your favourite music is here</title>
+        <link rel="stylesheet" href="style.css">
+        </head>
 <body>
-    <!-- Navbar  Section Start -->
-    <header>
-        <a href="#" class="logo">Personal <span> Porfolio</span>.</a>
-
-        <div class="bx bx-menu" id="menu-icon"></div>
-
-        <ul class="navbar">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <div class="bx bx-moon" id="darkmode"></div>
+    <nav>
+        <ul>
+            <li class="brand"><img src="logo.png" alt="Spotify"> Spotify</li>
+            <li>Home</li>
+            <li>About</li>
         </ul>
-    </header>
-    <!-- Navbar Section End -->
-    <!-- Home Section Start -->
-    <section class="home" id="home">
+    </nav>
 
-        <div class="home-img">
-            <img src="IMG_20200524_115819.jpg" alt="">
-        </div>
-        <div class="home-text">
-            <span>Hello, I'm</span>
-            <h1>Rohit Rahul Bhalerao</h1>
-            <h2>Frontend Developer</h2>
-           
-
-    </section>
-    <!-- Home Section End -->
-    <!-- About Section Start -->
-
-    <section class="about" id="about">
-        <div class="heading">
-            <h2>About Me</h2>
-            <span>Introduction</span>
-        </div>
-
-        <div class="about-container">
-            <div class="about-img">
-                <img src="IMG_20200524_115819.jpg" alt="">
-            </div>
-            <div class="about-text">
-                <p>I had graduated from DR.D.Y.Patil Institute of Technology with 7.88 CGPA in 2021.I live in Pimpri Pune - 411017.
-                    I was intrested in coding from my college life but was not having relevent resources and was finding difficult 
-                    to code at initial level.Being a Electrical Engineer still I chose to switch my interest as my Career.
-                    I had learned all the Skills mentioned below required for a Frontend Developer.
-
-                </p>
-                <div class="information">
-                    <div class="info-box">
-                        <i class='bx bxs-user'></i>
-                        <span>Rohit Rahul Bhalerao</span>
-                    </div>
-
-                    <div class="info-box">
-                        <i class='bx bxs-phone'></i>
-                        <span>8149565088</span>
-                    </div>
-
-                    <div class="info-box">
-                        <i class='bx bxs-envelope'></i>
-                        <span>rohitbhalerao55@yahoo.com</span>
-                    </div>
+    <div class="container">
+        <div class="songList">
+            <h1>Best of NCS - No Copyright Sounds</h1>
+            <div class="songItemContainer">
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="0" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- About Section End -->
-
-    <!-- Skills Section Start -->
-
-    <section class="skills" id="skills">
-        <div class="heading">
-            <h2>Skills</h2>
-            <span>My Skills</span>
-        </div>
-
-        <div class="skills-container">
-
-
-            <div class="bars">
-
-                <div class="bars-box">
-                    <h3>HTML</h3>
-                    <span>90%</span>
-                    <div class="light-bar"></div>
-                    <div class="percent-bar html-bar"></div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="1" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
-
-                <div class="bars-box">
-                    <h3>CSS</h3>
-                    <span>80%</span>
-                    <div class="light-bar"></div>
-                    <div class="percent-bar css-bar"></div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="2" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
-
-                <div class="bars-box">
-                    <h3>JavaScript</h3>
-                    <span>70%</span>
-                    <div class="light-bar"></div>
-                    <div class="percent-bar js-bar"></div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="3" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
-
-                <div class="bars-box">
-                    <h3>React</h3>
-                    <span>30%</span>
-                    <div class="light-bar"></div>
-                    <div class="percent-bar react-bar"></div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="4" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="5" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="6" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="7" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="8" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="9" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
             </div>
-
         </div>
-    </section>
-    <!-- Skills Section End -->
-
-
-
-    <!-- Contact Section Start -->
-    <section class="contact" id="contact">
-        <div class="heading">
-            <h2>Contact</h2>
-            <span>Connect Me</span>
-        </div>
-        <div class="contact-form">
-            <form action="">
-                <input type="text" placeholder="Your Name">
-                <input type="email" name="" id="" placeholder="Your Email">
-                <textare name="" id="" cols="30" rows="10" placeholder="Write Message Here..."></textare>
-                <input type="button" value="Send" class="contact-button">
-            </form>
-        </div>
-    </section>
-    <!-- Contact Section End -->
-    <div class="footer">
-        <h2>Follow Me</h2>
-        <div class="footer-social">
-            <a href="https://www.facebook.com/rohit.bhalerao.7568" target="_blank"><i class='bx bxl-facebook'></i></a>
-
-            <a href="https://www.instagram.com/rohitbhalerao31" target="_blank"><i class='bx bxl-instagram'></i></a>
-
-        </div>
-
+        <div class="songBanner"></div>
     </div>
 
-    <div class="copyright">
-        © Personal Portfolio | All Right Reserved.</p>
+    <div class="bottom">
+        <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
+        <div class="icons">
+            <!-- fontawesome icons -->
+            <i class="fas fa-3x fa-step-backward" id="previous"></i>
+            <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
+            <i class="fas fa-3x fa-step-forward" id="next"></i> 
+        </div>
+        <div class="songInfo">
+            <img src="playing.gif" width="42px" alt="" id="gif"> <span id="masterSongName">Warriyo - Mortals [NCS Release]</span>
+        </div>
     </div>
-    <!-- Javascript -->
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
