--- a/index.html
+++ b/index.html
@@ -3,29 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Age Calculator</title>
+    <title>To-Do List App</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="parent">
-        <div class="inp">
-            <input type="date" id="input" placeholder="day/month/year">
-            <button id="button" onclick="calc()">Current Age</button>
-        </div>
 
-        <!-- Display -->
-        <ul>
-            <li><span>00</span>years</li>
-            <li><span>00</span>months</li>
-            <li><span>00</span>days</li>
-            <li><span>00</span>hour</li>
-            <li><span>00</span>minutes</li>
-            <li><span>00</span>seconds</li>
-        </ul>
+    <div class="container">
+
+        <div class="todo-app">
+            <h2>To-DO List <img src="/Images/icon.png" alt=""></h2>
+
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add yout Text">
+                <button onclick="addTask()">Add</button>
+            </div>
+            <ul id="list-container">
+                
+            </ul>
+        </div>
 
     </div>
 
-
- <script src="/script.js"></script>
+ <script src="/script.js"></script>   
 </body>
 </html>
